<resources>
    <string name="app_name">GroupAlarm</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="personal">Personal</string>
    <string name="my_alarm">My Alarm</string>
    <string name="friends_alarm">Friends\' Alarm</string>
    <string name="title_activity_login">Group Alarm</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_alarm_ring">AlarmRingActivity</string>
    <string name="add_new_friend">Add new friend</string>
    <string name="sorted_by">Sorted by:</string>
    <string name="awake">Awake</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="ringing">Ringing</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="visible">Visible</string>
    <string name="activated">Activated</string>
    <string name="settings">Settings</string>
    <string name="friends">Friends</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibrate_when_ringing">Vibrate when ringing</string>
    <string name="volume">Volume</string>
    <string name="language">Language</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="swipe_to_stop">Swipe to stop</string>
    <string name="_5_more_minutes">5 more minutes</string>
    <string name="set_time">Set Time</string>
    <string name="delete_alarm_dialog">Do you want to delete this alarm?</string>
    <string name="i_am_awake">I am awake</string>
    <string name="login_error">Login Error!</string>
    <string name="logout">Logout</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="password">Password</string>
    <string name="password1">Password:</string>
    <string name="username_email">Username/Email</string>
    <string name="username_email1">Username/Email:</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hint_search">Search for new friends</string>
    <string name="new_friend">New Friend</string>
</resources>
