<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FriendListFragment">

    <Switch
        android:id="@+id/switch_sort_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sorted_by" />

    <LinearLayout
        android:id="@+id/friend_list_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_sort_by"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/awake" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ringing" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_friend_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/friend_list_category"></android.support.v7.widget.RecyclerView>


</RelativeLayout>