<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    tools:context=".SettingsActivity">


    <TextView
        android:id="@+id/vibrate_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/vibrate_when_ringing"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/vibrate_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/vibrate_textView"
        android:layout_marginEnd="60dp" />

    <TextView
        android:id="@+id/ringtone_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp"
        android:text="@string/ringtone"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/current_ringtone_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/ringtone_textView"
        android:text="Default Ringtone"
        android:textSize="20sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="?android:attr/listDivider" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/volume_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:text="@string/volume"
        android:textSize="20sp" />

    <SeekBar
        android:id="@+id/volume_seekBar"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/volume_textView" />


</RelativeLayout>